--- a/src/App.css
+++ b/src/App.css
@@ -4,12 +4,11 @@
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+  height: 50vmin;
 }
 
 .App {
   background-color: #282c34;
-  min-height: 100vh;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -20,18 +19,39 @@
 }
 .Messages {
     width: 100%;
-    height:50vw;
+    height:80vh;
     overflow-y: scroll;
 }
+
+.Messages ul {
+    list-style-type: none;
+    padding: 0;
+
+}
+.Messages li {
+    border-width: 2px;
+    border-style: solid;
+    border-color: gray;
+    opacity:1;
+    margin: .5em;
+}
+
+.Messages li:last-child {
+    border-width: 5px;
+    border-style: solid;
+    opacity: 1;
+}
+
 .Actions {
     display: flex;
     align-items: stretch;
     width: 100%;
-    height: 10vh;
+    height: 20vh;
 }
 
 .Actions button {
     flex: 1;
+    background-color: white;
 
 }
 
