--- a/src/App.css
+++ b/src/App.css
@@ -2,11 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 50vmin;
-}
-
 .App {
   background-color: #282c34;
   width: 100%;
@@ -17,6 +12,7 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
+
 .Messages {
     width: 100%;
     height:80vh;
@@ -26,17 +22,18 @@
 .Messages ul {
     list-style-type: none;
     padding: 0;
-
 }
+
 .Messages li {
     border-width: 2px;
     border-style: solid;
     border-color: gray;
-    opacity:1;
+    opacity:.7;
     margin: .5em;
+    padding: .5em;
 }
 
-.Messages li:last-child {
+.Messages li:nth-last-child(2) {
     border-width: 5px;
     border-style: solid;
     opacity: 1;
@@ -52,7 +49,7 @@
 .Actions button {
     flex: 1;
     background-color: white;
-
+    width:100%
 }
 
 .Messages textarea {
